--- a/app/views/minutes/index.html.erb
+++ b/app/views/minutes/index.html.erb
@@ -1,5 +1,4 @@
-<p id="notice"><%= notice %></p>
-<%= link_to 'Agregar Nueva acta', new_minute_path, :class=>"btn btn-lg btnAdmin" %><br>
+<%= link_to 'Agregar nueva acta', new_minute_path, :class=>"btn btn-lg btnAdmin" %><br>
 
 <div class="panel panel-default panelRease">
 	<div class="panel-heading">
