--- a/app/views/sections/index.html.erb
+++ b/app/views/sections/index.html.erb
@@ -16,7 +16,7 @@
 
 <%= link_to "Administrar Institución", institutions_path, class:"btn btn-lg btnAdmin"%>
 
-<%= link_to "Administrar links de interés", sections_linkInteres_path, class:"btn btn-lg btnAdmin"%>
+<%= link_to "Administrar links de interés", interest_links_path, class:"btn btn-lg btnAdmin"%>
 
 <%= link_to "Ver listado de usuarios",  users_listarUsuarios_path, class:"btn btn-lg btnAdmin"%>
 
