despliegue de las secciones, eventos, solicitudes y ofertas ordenados de acuerdo a su creacion o orden alfabetico

--- a/app/views/interest_links/index.html.erb
+++ b/app/views/interest_links/index.html.erb
@@ -1,3 +1,4 @@
+<h1>Administrar links de interés </h1>
 <%= link_to 'Agregar nuevo link de interés', new_interest_link_path, :class=>"btn btn-lg btnAdmin" %><br>
 
 <div class="panel panel-default panelRease">
