--- a/app/views/minutes/index.html.erb
+++ b/app/views/minutes/index.html.erb
@@ -1,3 +1,4 @@
+<h1>Administrar actas </h1>
 <%= link_to 'Agregar nueva acta', new_minute_path, :class=>"btn btn-lg btnAdmin" %><br>
 
 <div class="panel panel-default panelRease">
