--- a/app/views/sections/aprendizaje.erb
+++ b/app/views/sections/aprendizaje.erb
@@ -1,3 +1,5 @@
+<h1>Administrar ¿Qué es A+S? </h1>
+
 <div class="panel panel-default panelRease" >
 	<div class="panel-heading">
 		Crear una nueva sección para Aprendizaje y Servicio
