--- a/app/views/sections/novedades.html.erb
+++ b/app/views/sections/novedades.html.erb
@@ -1,3 +1,4 @@
+<h1>Administrar Novedad </h1>
 <div class="panel panel-default panelRease" >
 	<div class="panel-heading">
 		Crear una nueva novedad
