--- a/app/views/sections/somos.erb
+++ b/app/views/sections/somos.erb
@@ -1,3 +1,5 @@
+<h1>Administrar ¿Quiénes somos? </h1>
+
 <div class="panel panel-default panelRease" >
 	<div class="panel-heading">
 		Crear una nueva seccion de Somos
