--- a/app/views/institutions/index.html.erb
+++ b/app/views/institutions/index.html.erb
@@ -1,3 +1,4 @@
+<h1>Administrar Institución </h1>
 <%= link_to 'Agregar institución', new_institution_path, :class=>"btn btn-lg btnAdmin" %><br>
 
 <div class="panel panel-default panelRease">
