--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -1,6 +1,5 @@
 <h1>Solicitudes de servicio</h1>
 
-
 <% if current_user.category != 2 %>
 	<%= link_to "Nueva solicitud de servicio", new_request_path, :class => 'btn btn-lg' %>
 <%end%>
@@ -12,6 +11,7 @@
 		</div>
 		<div class="panel-body">
 			<%=raw request.description %>
+			<p><strong>Estado: </strong><%=request.status %></p>
 		</div>
 		<div class="panel-footer">
 			<p><strong>Creador: </strong>
@@ -19,6 +19,8 @@
 			<%if !request.user.photo.blank?%>
 			<%= image_tag request.user.photo.url(:mini), :class =>"RoundPicture" %>
 			<%end %></p>
+			<p><strong>Fecha de inicio: </strong><%=l request.start_time %></p>
+      		<p><strong>Fecha de término: </strong><%=l request.end_time %></p>
 			<%= link_to "Ver solicitud", request%>
 		</div>
 	</div>
