--- a/app/views/sections/hacemos.erb
+++ b/app/views/sections/hacemos.erb
@@ -1,3 +1,4 @@
+<h1>Administrar ¿Qué hacemos? </h1>
 <div class="panel panel-default panelRease" >
 	<div class="panel-heading">
 		Crear una nueva sección de hacemos
