--- a/app/views/institutions/_form.html.erb
+++ b/app/views/institutions/_form.html.erb
@@ -29,5 +29,5 @@
 	</div>	
 </div>
 	<%= f.submit orden, :class=>"btn btn-lg btnCRUD" %>
-	<%= link_to 'Volver', interest_links_path, :class =>"btn btn-lg btnCRUD" %>
+	<%= link_to 'Volver', institutions_path, :class =>"btn btn-lg btnCRUD" %>
 <% end %>
