--- a/app/views/sections/estatutos.erb
+++ b/app/views/sections/estatutos.erb
@@ -9,19 +9,4 @@
 
 <h1>Secciones de Estatutos anteriores: </h1>
 
-<div class="panel">
-	<div class="panel-heading">
-		
-	</div>
-	<div class="panel-body">
-		<% @sections.each do |seccion| %>
-			<%if seccion.order == "Estatutos"%>
-				<p>
-				<%=	link_to seccion.title, seccion %>  - 
-				<%= link_to "Editar", edit_section_path(seccion)%> - 
-				<%= link_to 'Eliminar', seccion, method: :delete, data: { confirm: '¿Está seguro de eliminar esta sección?' } %>
-				</p>
-			<%end%>
-		<%end%>
-	</div>
-</div>
+<%= render "muestra", {orden: "Estatutos", eliminar: "Si"} %>
