--- a/app/views/contact_mailer/contact_receiver.html.erb
+++ b/app/views/contact_mailer/contact_receiver.html.erb
@@ -17,7 +17,7 @@
 		</div>
 		<div class="panel-footer">
 			<br><br>
-			<p><strong>Red Nacional de aprendizaje y servicio.</strong></p>
+			<p><strong>Red Nacional de aprendizaje servicio.</strong></p>
 			<p>coordinacion.rease@gmail.com</p>
 		</div>
 	</div>   
