--- a/app/views/contact_mailer/contact_sender.html.erb
+++ b/app/views/contact_mailer/contact_sender.html.erb
@@ -18,7 +18,7 @@
 			<div class="panel-footer">
 				<br><br>
 				<p>Muchas gracias por contactarse con nostros, intentaremos contestarle a la brevedad</p><br>
-				<p><strong>Red Nacional de aprendizaje y servicio.</strong></p>
+				<p><strong>Red Nacional de aprendizaje servicio.</strong></p>
 				<p>coordinacion.rease@gmail.com</p>
 			</div>
 		</div>   
