--- a/app/views/presentation/aprendizaje.html.erb
+++ b/app/views/presentation/aprendizaje.html.erb
@@ -1,6 +1,6 @@
 <h1>¿Qué es A+S?</h1>
 <% @sections.each do |seccion| %>
-	<%if seccion.order == "Aprendizaje y Servicio"%>
+	<%if seccion.order == "Aprendizaje Servicio"%>
 		<%if seccion.priority =="Alta" %>		
 			<div  class="panel panel-default panelRease">
 				<div class="panel-heading">
@@ -14,7 +14,7 @@
 	<%end%>
 <%end%>
 <% @sections.each do |seccion| %>
-	<%if seccion.order == "Aprendizaje y Servicio"%>
+	<%if seccion.order == "Aprendizaje Servicio"%>
 		<%if seccion.priority =="Media" %>		
 			<div  class="panel panel-default panelRease">
 				<div class="panel-heading">
@@ -28,7 +28,7 @@
 	<%end%>
 <%end%>
 <% @sections.each do |seccion| %>
-	<%if seccion.order == "Aprendizaje y Servicio"%>
+	<%if seccion.order == "Aprendizaje Servicio"%>
 		<%if seccion.priority =="Baja" %>		
 			<div  class="panel panel-default panelRease">
 				<div class="panel-heading">
