--- a/app/views/presentation/hacemos.html.erb
+++ b/app/views/presentation/hacemos.html.erb
@@ -1,6 +1,6 @@
 <h1>¿Qué hacemos?</h1>
 <p>
-La Red Nacional de Aprendizaje y Servicio Chile a definido su rol a desempeñar a base de cuatro directrices, las cuales son: 
+La Red Nacional de Aprendizaje Servicio Chile a definido su rol a desempeñar a base de cuatro directrices, las cuales son: 
 </p>
 <center>
 	<% @sections.each do |seccion| %>
