--- a/app/views/presentation/somos.html.erb
+++ b/app/views/presentation/somos.html.erb
@@ -1,6 +1,6 @@
 <h1>¿Quiénes somos?</h1>
 <p>
-La Red Nacional de Aprendizaje y Servicio Chile reúne  a profesores, estudiantes, universidades, colegios, agrupaciones civiles y en general a todas las personas y organizaciones en Chile que estén interesadas en esta metodología.
+La Red Nacional de Aprendizaje Servicio Chile reúne  a profesores, estudiantes, universidades, colegios, agrupaciones civiles y en general a todas las personas y organizaciones en Chile que estén interesadas en esta metodología.
 </p>
 <center>
 	<% @sections.each do |seccion| %>
