--- a/app/views/sections/aprendizaje.erb
+++ b/app/views/sections/aprendizaje.erb
@@ -1,13 +1,6 @@
 <h1>Administrar ¿Qué es A+S? </h1>
 
-<div class="panel panel-default panelRease" >
-	<div class="panel-heading">
-		Crear una nueva sección para Aprendizaje y Servicio
-	</div>
-	<div class="panel-body">
-		<%= render "form",orden: "Aprendizaje y Servicio"%>
-	</div>
-</div>
+<%= link_to "Nueva seccion de Aprendizaje Servicio", sections_newAprendizaje_path, :class=>"btn btn-lg btnCRUD"%>
 
 <h1>Sección A+S Anteriores: </h1>
-<%= render "muestra", {orden: "Aprendizaje y Servicio", eliminar: "Si"} %>
+<%= render "muestra", {orden: "Aprendizaje Servicio", eliminar: "Si"} %>
