--- a/app/views/sections/novedades.html.erb
+++ b/app/views/sections/novedades.html.erb
@@ -1,12 +1,6 @@
-<h1>Administrar Novedad </h1>
-<div class="panel panel-default panelRease" >
-	<div class="panel-heading">
-		Crear una nueva novedad
-	</div>
-	<div class="panel-body">
-		<%= render "form",orden: "Novedad" %>
-	</div>
-</div>
+<h1>Administrar Novedades </h1>
+<%= link_to "Nueva seccion de Novedad", sections_newNovedades_path, :class=>"btn btn-lg btnCRUD"%>
 
-<h1>Novedades anteriores: </h1>
+<h1>Secciones de ¿Qué hacemos? anteriores: </h1>
 <%= render "muestra", {orden: "Novedad", eliminar: "Si"} %>
+
