--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -86,7 +86,7 @@
 	<footer>
 		<!--Pie de página-->
 		<div  id="pies" class = "navbar-default pies">
-			REASE - Red Nacional de Aprendizaje y Servicio
+			REASE - Red Nacional de Aprendizaje Servicio
 			<br>
 			Contacto: reasechile@gmail.com
 		</div>
