--- a/app/views/presentation/index.html.erb
+++ b/app/views/presentation/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Bienvenido al sitio de la Red Nacional de Aprendizaje y Servicio:</h1>
+<h1>Bienvenido al sitio de la Red Nacional de Aprendizaje Servicio:</h1>
 <% @sections.each do |seccion| %>
 	<%if seccion.order == "Novedad"%>
 		<%if seccion.priority =="Alta" %>		
