--- a/app/views/sections/_muestra.html
+++ b/app/views/sections/_muestra.html
@@ -1,9 +1,9 @@
 <% orden %>
 <% eliminar %>
 
-<div class="panel">
+<div class="panel panel-default panelRease">
 	<div class="panel-heading">
-		
+		Listado de <%=orden%>
 	</div>
 	<div class="panel-body">
 		<% @sections.each do |seccion| %>
