--- a/app/views/sections/somos.erb
+++ b/app/views/sections/somos.erb
@@ -1,13 +1,6 @@
-<h1>Administrar ¿Quiénes somos? </h1>
+<h1>Administrar ¿Quiénes Somos? </h1>
+<%= link_to "Nueva seccion de ¿Quiénes Somos?", sections_newSomos_path, :class=>"btn btn-lg btnCRUD"%>
 
-<div class="panel panel-default panelRease" >
-	<div class="panel-heading">
-		Crear una nueva seccion de Somos
-	</div>
-	<div class="panel-body">
-		<%= render "form",orden: "Somos" %>
-	</div>
-</div>
-
-<h1>Secciones de Somos anteriores: </h1>
+<h1>Secciones de ¿Qué hacemos? anteriores: </h1>
 <%= render "muestra", {orden: "Somos", eliminar: "Si"} %>
+
