barra de búsqueda sin autenticar

--- a/app/views/institutions/show.html.erb
+++ b/app/views/institutions/show.html.erb
@@ -11,6 +11,7 @@
 		<%= image_tag @institution.logo.url(:mini) %>
 	</div>
 </div>
-
+<%if user_signed_in? %>
 <%= link_to 'Editar', edit_institution_path(@institution), :class =>"btn btn-lg" %>
 <%= link_to 'Volver', institutions_path, :class =>"btn btn-lg" %>
+<%end%>
