--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -144,6 +144,16 @@ p
     margin-left: auto;
     margin-right: auto;
 }
+
+.navCenter
+{
+	margin: 8px;
+	margin-left: 8px;
+	padding: 0;
+	margin-bottom: -8px;
+	max-width: 200px;
+}
+
 .note
 {
 	text-align: right;
