--- a/app/views/minutes/show.html.erb
+++ b/app/views/minutes/show.html.erb
@@ -9,6 +9,9 @@
 		<p> <strong>Fecha de la reunión:</strong> <%= @minute.date%></p>		
 	</div>
 </div>
+
+<%if user_signed_in? %>
 <%= link_to 'Ver Acta', @minute.archive.url, :class =>"btn btn-lg btnCRUD" %>
 <%= link_to 'Editar', edit_minute_path(@minute), :class =>"btn btn-lg btnCRUD" %>
 <%= link_to 'Volver', minutes_path, :class =>"btn btn-lg btnCRUD" %>
+<%end%>
