--- a/app/views/partials/_navigation.html.erb
+++ b/app/views/partials/_navigation.html.erb
@@ -71,6 +71,17 @@
 					</li>
 				<%end%>
 
+				<li role="presentation" class="navCenter">
+					<%= form_tag(presentation_searchPage_path, :method => "get",:class=>"form-inline") do %>
+					<div class="input-group">
+						<%= text_field_tag :search, params[:search], placeholder: "Buscar...",:class => 'form-control' %>
+						<span class="input-group-btn">
+							<%= submit_tag "Ir", :class => 'btn btn-default' %>
+						</span>
+					</div>
+					<%end%>
+				</li>
+
 
 			</ul>
 			<p class="navbar-text navbar-right">
