Detalles de búsqueda arreglados

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -3,6 +3,18 @@
 	<%= link_to 'Nuevo evento', new_event_path, :class => "btn btn-lg " %>
 <% end %>
 	<%= link_to 'Mostrar eventos', events_listado_path ,:class => "btn btn-lg " %>
+
+<div class="buscador">
+	<%= form_tag(events_listado_path, :method => "get",:class=>"form-inline") do %>
+	<div class="input-group">
+		<%= text_field_tag :search, params[:search], placeholder: "Buscar eventos",:class => 'form-control' %>
+		<span class="input-group-btn">
+			<%= submit_tag "Ir", :class => 'btn btn-default' %>
+		</span>
+	</div>
+	<%end%>
+</div>
+
 <div  class="panel panel-default panelRease">
 	<div class="panel-heading">
 		Calendario de eventos
