--- a/app/views/events/listado.html.erb
+++ b/app/views/events/listado.html.erb
@@ -2,26 +2,36 @@
 
 <%= link_to "Volver al calendario", events_path , :class => "btn btn-lg btnCRUD" %>
 
+<% if @events.present? %>
+  <% @events.each do |event| %>
+    <div class="panel panel-default panelRease">
+      <div class="panel-heading">
+        <%= event.title %>
+      </div>
+      <div class="panel-body">
+        <%=raw event.description %>
+      </div>
 
-<% @events.each do |event| %>
+      <div class="panel-footer">
+        <p><strong>Creado por:</strong>
+        <%= link_to event.user.nickname, user_path(event.user.id) %>
+        <%if !event.user.photo.blank?%>
+          <%= image_tag event.user.photo.url(:mini), :class =>"RoundPicture" %>
+        <%end %>
+        <p>
+        <p><strong>Fecha y hora de inicio: </strong><%=l event.start_time %></p>
+        <p><strong>Fecha y hora de término: </strong><%=l event.end_time %></p>
+        <%= link_to "Ver evento", event %>
+      </div>
+    </div>
+  <%end%>
+<%else%>
   <div class="panel panel-default panelRease">
     <div class="panel-heading">
-      <%= event.title %>
+      Búsqueda de <%= params[:search] %>
     </div>
     <div class="panel-body">
-      <%=raw event.description %>
-    </div>
-
-    <div class="panel-footer">
-      <p><strong>Creado por:</strong>
-      <%= link_to event.user.nickname, user_path(event.user.id) %>
-      <%if !event.user.photo.blank?%>
-        <%= image_tag event.user.photo.url(:mini), :class =>"RoundPicture" %>
-      <%end %>
-      <p>
-      <p><strong>Fecha y hora de inicio: </strong><%=l event.start_time %></p>
-      <p><strong>Fecha y hora de término: </strong><%=l event.end_time %></p>
-      <%= link_to "Ver evento", event %>
+      <p>No hay resultados en la búsqueda de <strong><%= params[:search] %></strong></p>
     </div>
   </div>
 <%end%>
