--- a/app/views/offerings/index.html.erb
+++ b/app/views/offerings/index.html.erb
@@ -3,26 +3,48 @@
 <% if current_user.category != 4 %>
   <%= link_to "Nueva oferta de servicio", new_offering_path, :class => 'btn btn-lg' %>
 <%end%>
+<div class="buscador">
+  <%= form_tag(offerings_path, :method => "get",:class=>"form-inline") do %>
+  <div class="input-group">
+    <%= text_field_tag :search, params[:search], placeholder: "Buscar ofertas",:class => 'form-control' %>
+    <span class="input-group-btn">
+      <%= submit_tag "Ir", :class => 'btn btn-default' %>
+    </span>
+  </div>
+  <%end%>
+</div>
 
-<% @offerings.each do |offering| %>
+<%if @offerings.present?%>
+  <% @offerings.each do |offering| %>
+    <div class="panel panel-default panelRease">
+      <div class="panel-heading">
+        <%= offering.title %>
+      </div>
+      <div class="panel-body">
+        <%=raw offering.description %>
+        <p><strong>Estado: </strong><%=offering.status %></p>
+      </div>
+
+      <div class="panel-footer">
+        <p><strong>Creador: </strong>
+        <%= link_to offering.user.nickname, user_path(offering.user.id) %>
+        <%if !offering.user.photo.blank?%>
+          <%= image_tag offering.user.photo.url(:mini), :class =>"RoundPicture" %>
+        <%end %>
+        <p><strong>Fecha de inicio: </strong><%=l offering.start_time %></p>
+        <p><strong>Fecha de término: </strong><%=l offering.end_time %></p>
+        <%= link_to "Ver oferta", offering %>
+      </div>
+    </div>
+  <%end%>
+<%else%>
   <div class="panel panel-default panelRease">
     <div class="panel-heading">
-      <%= offering.title %>
+      Búsqueda de <%= params[:search] %>
     </div>
     <div class="panel-body">
-      <%=raw offering.description %>
-      <p><strong>Estado: </strong><%=offering.status %></p>
-    </div>
-
-    <div class="panel-footer">
-      <p><strong>Creador: </strong>
-      <%= link_to offering.user.nickname, user_path(offering.user.id) %>
-      <%if !offering.user.photo.blank?%>
-        <%= image_tag offering.user.photo.url(:mini), :class =>"RoundPicture" %>
-      <%end %>
-      <p><strong>Fecha de inicio: </strong><%=l offering.start_time %></p>
-      <p><strong>Fecha de término: </strong><%=l offering.end_time %></p>
-      <%= link_to "Ver oferta", offering %>
+      <p>No hay resultados en la búsqueda de <strong><%= params[:search] %></strong></p>
     </div>
   </div>
+  <%= link_to "Volver", offerings_path, :class => 'btn btn-lg btnCRUD'%>
 <%end%>
