--- a/app/views/offerings/_form.html.erb
+++ b/app/views/offerings/_form.html.erb
@@ -1,15 +1,9 @@
 <%accion ||= "Crear"%>
 <%= form_for(@offering) do |f| %>
   <% if @offering.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@offering.errors.count, "error") %> prohibited this offering from being saved:</h2>
-
-      <ul>
       <% @offering.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+        <%flash[:alert] = message %>
       <% end %>
-      </ul>
-    </div>
   <% end %>
 
 <div class="panel panel-default panelRease" >
@@ -17,7 +11,7 @@
     <div class="panel-body">
 	<p class="note">*Todos los campos son obligatorios.</p>
 		<div class="field">
-			<%= f.text_field :title, :class => 'form-control', :placeholder => 'Titulo'%>
+			<%= f.text_field :title, :class => 'form-control', :placeholder => 'Titulo' ,:required=>true%>
 		</div>
 		
 		<div class="field">
@@ -29,7 +23,7 @@
 		</div>
 
 		<div class="field">
-			<%= f.text_area :description, :placeholder=> "Escribir aquí.", :id=>"eg-basic" %>
+			<%= f.text_area :description, :placeholder=> "Escribir aquí.", :id=>"eg-basic",:required=>true %>
 		</div>
 		
 		<div class="field">
