--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,15 +1,9 @@
 <%orden ||= "Crear"%>
 <%= form_for(@event) do |f| %>
   <% if @event.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@event.errors.count, "error") %> prohibited this event from being saved:</h2>
-
-      <ul>
       <% @event.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+        <%flash[:alert] = message %>
       <% end %>
-      </ul>
-    </div>
   <% end %>
 
 <div class="panel panel-default panelRease" >
@@ -18,11 +12,11 @@
     <p class="note">*Todos los campos son obligatorios.</p>
 
 		<div class="field">
-			<%= f.text_field :title, :placeholder => "Nombre del evento" , :class => 'form-control',autofocus: true %>
+			<%= f.text_field :title, :placeholder => "Nombre del evento" , :class => 'form-control',autofocus: true, :required => true %>
 		</div>
 		
 		<div class="field">
-			<%= f.text_area :address, :placeholder => "Lugar y/o dirección", :class => 'form-control',autofocus: true   %>
+			<%= f.text_area :address, :placeholder => "Lugar y/o dirección", :class => 'form-control',autofocus: true, :required => true  %>
 		</div>
 
 		<div class="field">
