--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -7,7 +7,7 @@
 <div class="buscador">
 	<%= form_tag(events_listado_path, :method => "get",:class=>"form-inline") do %>
 	<div class="input-group">
-		<%= text_field_tag :search, params[:search], placeholder: "Buscar eventos",:class => 'form-control' %>
+		<%= text_field_tag :search, params[:search], placeholder: "Buscar eventos",:class => 'form-control',:required=>true %>
 		<span class="input-group-btn">
 			<%= submit_tag "Ir", :class => 'btn btn-default' %>
 		</span>
