--- a/app/views/sections/_form.html.erb
+++ b/app/views/sections/_form.html.erb
@@ -1,6 +1,8 @@
 <%orden ||= "sección"%>
 <%accion ||= "Crear" %>
-
+<% @section.errors.full_messages.each do |mensaje|%>
+		<%flash[:alert] = mensaje %>
+<%end%>
 <div class="panel panel-default panelRease">
 	<div class="panel-heading">
 		<%=accion%> <%=orden%>
@@ -9,14 +11,9 @@
 		<center>
 			<div style="width: 90%">
 				<%= form_for(@section) do |f| %>
-						<% @section.errors.full_messages.each do |mensaje|%>
-						<div>
-							<p><%= mensaje%></p>
-						</div>
-					<%end%>
 					<p class="note">*Todos los campos son obligatorios.</p>
 					<div class="field">
-						<%= f.text_field :title, :class => 'form-control', :placeholder => 'Titulo' %>
+						<%= f.text_field :title, :class => 'form-control', :placeholder => 'Titulo',:required=>true %>
 					</div>
 					
 					<div class="field">
@@ -28,7 +25,7 @@
 					</div>
 					
 					<div class="field"> 
-						<%= f.text_area :body, :placeholder=> "Escriba acá.", :id=>"eg-basic" %>
+						<%= f.text_area :body, :placeholder=> "Escriba acá.", :id=>"eg-basic",:required=>true %>
 					</div>
 					
 
