--- a/app/views/sections/index.html.erb
+++ b/app/views/sections/index.html.erb
@@ -21,5 +21,7 @@
 
 <%= link_to "Ver listado de usuarios",  users_listarUsuarios_path, class:"btn btn-lg btnAdmin"%>
 
-<%= link_to "Administrar Actas",  minutes_path, class:"btn btn-lg btnAdmin"%>
+<%= link_to "Administrar actas",  minutes_path, class:"btn btn-lg btnAdmin"%>
+
+<%= link_to "Enviar boletín",  bulletins_path, class:"btn btn-lg btnAdmin"%>
 
