Correccion de ortografías en ciertas vistas

--- a/app/views/institutions/index.html.erb
+++ b/app/views/institutions/index.html.erb
@@ -7,7 +7,7 @@
 	</div>
 	<div class="panel-body">
 		<% @institutions.each do |institution| %>
-			<p><%=institution.name%>: - 
+			<p><%=institution.name%> - 
 			<%= link_to 'Ver detalle', institution %> -
 			<%= link_to 'Web', institution.web %> -
 			<%= link_to 'Borrar institución', institution, method: :delete, data: { confirm: '¿Seguro que desea eliminar esta institución?' } %>
