--- a/app/views/minutes/show.html.erb
+++ b/app/views/minutes/show.html.erb
@@ -5,7 +5,7 @@
 		Acta: <%= @minute.name %>
 	</div>
 	<div class="panel-body">
-		<p> <strong>Fecha de la reunión:</strong> <%= @minute.date%></p>		
+		<p> <strong>Fecha de la reunión:</strong> <%=l @minute.date%></p>		
 	</div>
 </div>
 
