--- a/app/views/sections/_section.html.erb
+++ b/app/views/sections/_section.html.erb
@@ -1,1 +1,1 @@
-<p><strong><%=section.order%>:</strong>  <%=section.title%> - <%= link_to "Ver", section %> </p>
+<p><strong><%=section.module%>:</strong>  <%=section.title%> - <%= link_to "Ver", section %> </p>
