--- a/app/views/sections/show.html.erb
+++ b/app/views/sections/show.html.erb
@@ -3,7 +3,7 @@
 		<%=	@section.title %>
 	</div>
 	<div class="panel-body">
-		<h2>Tipo: <%= @section.order %></h2>
+		<h2>Tipo: <%= @section.module %></h2>
 		<p>	<%=raw @section.body %></p>
 	</div>
 	<div class="panel-footer">
