--- a/app/views/partials/_estatutos.html.erb
+++ b/app/views/partials/_estatutos.html.erb
@@ -1,5 +1,5 @@
 <% @sections.each do |seccion| %>
-	<%if seccion.order == 'Estatutos'%>
+	<%if seccion.module == 'Estatutos'%>
 		<div  class="panel panel-default panelRease">
 			<div class="panel-heading">
 			<i class="glyphicon glyphicon-circle-arrow-left" data-dismiss="modal"></i>
