--- a/app/views/sections/_form.html.erb
+++ b/app/views/sections/_form.html.erb
@@ -17,11 +17,11 @@
 					</div>
 					
 					<div class="field">
-						<%= f.select(:order, [['Novedad','Novedad'],['Aprendizaje Servicio', 'Aprendizaje Servicio'],['Hacemos', 'Hacemos'],['Somos', 'Somos'],['Estatutos', 'Estatutos']],  {:selected=> orden,:include_blank => '— Seleccione una sección —' }, { :class => 'form-control', :required => true }) %>
+						<%= f.select(:module, [['Novedad','Novedad'],['Aprendizaje Servicio', 'Aprendizaje Servicio'],['Hacemos', 'Hacemos'],['Somos', 'Somos'],['Estatutos', 'Estatutos']],  {:include_blank => '— Seleccione una sección —' }, { :class => 'form-control', :required => true }) %>
 					</div>
 					
 					<div class="field">
-						<%= f.select(:priority, [['Alta', 'Alta'],['Media', 'Media'],['Baja', 'Baja']], {:include_blank => '— Prioridad —' }, { :class => 'form-control', :required => true }) %>
+						<%= f.select(:priority, [['Alta', 1],['Media', 2],['Baja', 3]], {:include_blank => '— Prioridad —' }, { :class => 'form-control', :required => true }) %>
 					</div>
 					
 					<div class="field"> 
