--- a/app/views/bulletins/index.html.erb
+++ b/app/views/bulletins/index.html.erb
@@ -1,10 +1,10 @@
-<h1>Boletines</h1>
+<h1>Correo</h1>
 
-<%= link_to 'Enviar nuevo boletín', new_bulletin_path,:class=>'btn btn-lg btnCRUD' %>
+<%= link_to 'Escribir Correo', new_bulletin_path,:class=>'btn btn-lg btnCRUD' %>
 
 <div class="panel panel-default panelRease">
 	<div class="panel-heading">
-		Boletines enviados anteriormente
+		Correos enviados anteriormente
 	</div>
 	<div class="panel-body">
 		<%@bulletins.each do |bulletin|%>
