--- a/app/views/sections/index.html.erb
+++ b/app/views/sections/index.html.erb
@@ -23,5 +23,4 @@
 
 <%= link_to "Administrar actas",  minutes_path, class:"btn btn-lg btnAdmin"%>
 
-<%= link_to "Enviar boletín",  bulletins_path, class:"btn btn-lg btnAdmin"%>
-
+<%= link_to "Enviar correo a todos",  bulletins_path, class:"btn btn-lg btnAdmin"%>
