--- a/app/views/partials/_navigation.html.erb
+++ b/app/views/partials/_navigation.html.erb
@@ -36,7 +36,7 @@
 					<%= link_to 'Contacto <i class="glyphicon glyphicon-envelope"></i>'.html_safe, contacts_path %>
 				</li>
 				<li role="presentation" class="navCenter">
-					<%= form_tag(presentation_searchPage_path, :method => "get",:class=>"form-inline") do %>
+					<%= form_tag(presentation_searchPage_path, :method => "post",:class=>"form-inline") do %>
 					<div class="input-group">
 						<%= text_field_tag :search, params[:search], placeholder: "Buscar en la página",:class => 'form-control',:required => true %>
 						<span class="input-group-btn">
@@ -63,6 +63,10 @@
 				</li>
 
 				<li role="presentation">
+					<%= link_to 'Experiencias <i class="glyphicon glyphicon-education"></i>'.html_safe, experiences_path %>
+				</li>
+
+				<li role="presentation">
 					<%= link_to 'Eventos <i class="glyphicon glyphicon-calendar"></i>'.html_safe, events_path %>
 				</li>
 				<%if current_user.category == 1%>
@@ -72,7 +76,7 @@
 				<%end%>
 
 				<li role="presentation" class="navCenter">
-					<%= form_tag(presentation_searchPage_path, :method => "get",:class=>"form-inline") do %>
+					<%= form_tag(presentation_searchPage_path, :method => "post",:class=>"form-inline") do %>
 					<div class="input-group">
 						<%= text_field_tag :search, params[:search], placeholder: "Buscar en la red",:class => 'form-control',:required => true %>
 						<span class="input-group-btn">
