--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -39,8 +39,9 @@
       <div class="field">
         <%= f.text_area :description, :class => 'form-control', :placeholder => 'Anote aquí algo sobre usted' %>
       </div>
+      <p class="note">Sí no se encuentra su institución comuníquese con un administrador</p>
       <div class="field">
-        <%= f.select :institution_id, Institution.all.collect {|ins| [ins.name, ins.id]},{:include_blank => "Institución a la que pertenece (Opcional)"},{ :class => 'form-control'} %>
+        <%= f.select :institution_id, @institutions.collect {|ins| [ins.name, ins.id]},{:include_blank => "Institución a la que pertenece (Opcional)"},{ :class => 'form-control'} %>
       </div>
       <hr>
       <h2>Foto de perfil</h2>
