--- a/app/views/offerings/_form.html.erb
+++ b/app/views/offerings/_form.html.erb
@@ -16,7 +16,10 @@
 		<div class="field">
 		<%= f.text_area :resume, :class => 'form-control', :placeholder => 'Resumen de la oferta' ,:required=>true%>
 		</div>
-		
+		<p class="note">Sí no se encuentra su área de trabajo comuníquese con un administrador</p>
+		<div class="field">
+			<%= f.select(:area_id, Area.all.collect {|area| [area.name, area.id]},{:include_blank => "Área de trabajo (Opcional)"},{ :class => 'form-control'}) -%>
+		</div>
 		<div class="field">
 			<% if accion == "Actualizar" %>
 				<%= f.select(:status, [['Disponible', 1],['En proceso', 2],['Realizado',3], ['Cancelado',4], ['Caducado', 5]], {:include_blank => '-- Seleccione un estado --' }, { :class => 'form-control', :required => true }) %>
