--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -20,7 +20,10 @@
 				</div>
 				<%= error_span(@request[:title]) %>
 			</div>
-
+			<p class="note">Sí no se encuentra su área de trabajo comuníquese con un administrador</p>
+			<div class="field">
+				<%= f.select(:area_id, Area.all.collect {|area| [area.name, area.id]},{:include_blank => "Área de trabajo (Opcional)"},{ :class => 'form-control'}) -%>
+			</div>
 			<% if accion == "Actualizar" %>
 				<%= f.select(:status, [['Disponible', 1],['En proceso', 2],['Realizado',3], ['Cancelado',4], ['Caducado', 5]], {:include_blank => '-- Seleccione un estado --' }, { :class => 'form-control', :required => true }) %>
 			<% else %>
