--- a/app/views/requests/_request.html.erb
+++ b/app/views/requests/_request.html.erb
@@ -1,1 +1,4 @@
-<p><strong>Solicitud de Servicio: </strong> <%=request.title%> - <%=	link_to "Ver", request %> </p>
+<p>
+<%if request.status==3%><strong>Experiencia: </strong>
+<%else%><strong>Solicitud de Servicio: </strong>
+<%end%><%=request.title%> - <%=	link_to "Ver", request %> </p>
