--- a/app/views/offerings/_offering.html.erb
+++ b/app/views/offerings/_offering.html.erb
@@ -1,1 +1,5 @@
-<p><strong>Oferta de Servicio: </strong> <%=offering.title%> - <%=	link_to "Ver", offering %> </p>
+<p>
+<%if offering.status==3%><strong>Experiencia: </strong>
+<%else%><strong>Oferta de Servicio: </strong>
+<%end%>
+ <%=offering.title%> - <%=	link_to "Ver", offering %> </p>
